03 - Usando o CancellationTokenSource e o CancellationToken APLICANDO FUNCIONALIDADE PARA CANCELAR AS TASK QUANDO O USUÁRIO SOLICITA O CANCELAMENTO DA ROTINA

--- a/ByteBank.View/MainWindow.xaml
+++ b/ByteBank.View/MainWindow.xaml
@@ -54,8 +54,9 @@
             <Button Name="BtnCancelar"
                 Padding="10"
                 Grid.Row="4"
-                Click="BtnProcessar_Click_Cancelar_Processamento">
-                Cancelar Processo
+                IsEnabled="False"
+                Click="BtnCancelar_Click">
+                Cancelar Processamento
             </Button>
         </Grid>
 
